[project]
name = "abbie-shared-codes-astro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]


[tool.ruff]
line-length = 120
target-version = "py312"
